--- a/MusicCityAnimalRescueManagement/Views/Vettings/CatIndex.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CatIndex.cshtml
@@ -240,9 +240,9 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "CatEdit", new { id = item.id }) |
-                    @Html.ActionLink("Details", "CatDetails", new { id = item.id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                    @Html.ActionLink("Edit", "CatEdit", new { id = item.id }) 
+                    @Html.ActionLink("Details", "CatDetails", new { id = item.id }) 
+                    @*@Html.ActionLink("Delete", "Delete", new { id = item.id })*@
                 </td>
             </tr>
         }
