--- a/MusicCityAnimalRescueManagement/Views/Vettings/DogIndex.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/DogIndex.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Vetting Records</h2>
+<h2>Dog Vetting Records</h2>
 
 <p>
     @Html.ActionLink("Add New Dog Record", "CreateDog")
@@ -120,7 +120,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.AdtlComments)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
