--- a/MusicCityAnimalRescueManagement/Views/Vettings/CatEdit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CatEdit.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MicrochipManufacturerId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MicrochipManufacturerId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("MicrochipManufacturerId", null, "Select", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MicrochipManufacturerId, "", new { @class = "text-danger" })
             </div>
         </div>
