--- a/MusicCityAnimalRescueManagement/Views/Vettings/CatIndex.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CatIndex.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Cat Vetting</h2>
+<h2>Cat Vetting Records</h2>
 
-<p>
-    @Html.ActionLink("Create New", "CreateCat")
+<p><a href="/Vettings/CreateCat" class="">Add New Cat Record</a>
 </p>
 <style>
     .container {
